--- a/emploee/Views/Emploee/Edit.cshtml
+++ b/emploee/Views/Emploee/Edit.cshtml
@@ -33,9 +33,9 @@
                 <span asp-validation-for="ImageUrl" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="Id" />
-            <input type="hidden" asp-for="ImageUrl" value="@Model.ImageUrl" />
+            <input type="hidden" asp-for="ImageUrl"  />
                 <input asp-for="CreationDate" type="hidden" class="form-control" />
-                
+                 
             
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
